alignment fixes'

--- a/themes/digitalsilk/modules/gutenberg/blocks/custom/dst-hero-banner/style.scss
+++ b/themes/digitalsilk/modules/gutenberg/blocks/custom/dst-hero-banner/style.scss
@@ -5,7 +5,7 @@
 
 .c-hero-banner {
 	position: relative;
-	overflow: hidden;
+	// overflow: hidden;
 	width: 100%;
 	min-height: 520px;
 	display: flex;
@@ -40,7 +40,6 @@
 		flex: 1;
 		padding: 60px 20px;
 		gap: 32px;
-		text-align: center;
 		margin: 0 auto;
 		width: 100%;
 	}
